# LearnFFmpeg

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: aformat.cpp.D7EEA37BDF077977.idx  avio_read.cpp.4B94CB3C2E4E10DC.idx  avio_write.cpp.F4D80560E67F4931.idx  bmp_parser.cpp.E7EB5780BD8A00DC.idx  cmdutils.c.40CE47A634300A60.idx  cmdutils.h.5065430581E3EC10.idx  codecpar.cpp.F36793A5E1805B9E.idx  config.h.C45193E7436B6BC3.idx  config_components.h.DA37366CD32D05D6.idx  decode.cpp.EE68822FB737C95D.idx  discardaudio.cpp.1DB09B0B260C2BE4.idx  encode.cpp.A40E7C8A8AB2D0BE.idx  ffplay.c.E7DF6435A7B9FD54.idx  flv_parser.cpp.804AE532622B35EB.idx  fopen_utf8.h.7F86759E80251931.idx  format.cpp.3ABB39A45171B875.idx  input.cpp.94C37C59199054BA.idx  muxfmt.cpp.70D20F77C998DF36.idx  opt_common.c.08E3D81E73CED221.idx  opt_common.h.14B2595EA45E383C.idx  option.cpp.63C36964EF4A065E.idx  (+13 more)
advance/: avio_read.cpp  avio_write.cpp  codecpar.cpp  discardaudio.cpp  muxfmt.cpp  seek_file.cpp
basic/: decode.cpp  encode.cpp  input.cpp  option.cpp  output.cpp  packet.cpp
cmake/: CMakeLists.txt  cmake.mac
ffplay/: CMakeLists.txt  clock.cpp  clock.h  cmdutils.c  cmdutils.cpp  cmdutils.h  common.cpp  common.h  config.h  config_components.h  decoder.cpp  decoder.h  ffplay.c  ffplay.cpp  frame.h  framequeue.cpp  framequeue.h  opt_common.c  opt_common.cpp  packetqueue.cpp  packetqueue.h
filter/: aformat.cpp  overlay.cpp  scale_v1.cpp  scale_v2.cpp  scale_v3.cpp  split_v1.cpp  split_v2.cpp  swr_convert.cpp  sws_scale_v1.cpp  sws_scale_v2.cpp
parser/: bmp_parser.cpp  flv_parser.cpp
